# app/Http/Controllers/Controller.php
@@ -6,19 +6,20 @@ namespace App\Http\Controllers;
  * @OA\OpenApi(
  *     @OA\Info(title="Tomato Scan API Documentation", version="1.0"),
  *     @OA\Server(
- *          url="https://tomascan.nurulmustofa.my.id",
- *          description="Production Server"
- *      ),
+ *         url="https://tomascan.nurulmustofa.my.id",
+ *         description="Production Server"
+ *     ),
  *     @OA\Server(
- *          url="https://localhost:8000",
- *          description="localhost Server"
- *      ),
+ *         url="https://localhost:8000",
+ *         description="localhost Server"
+ *     ),
  *     @OA\Components(
  *         @OA\SecurityScheme(
- *             securityScheme="Bearer",
+ *             securityScheme="bearerAuth",
  *             type="http",
  *             scheme="bearer",
- *             description="Enter your bearer token below. Example: `Bearer your.jwt.token`"
+ *             bearerFormat="JWT",
+ *             description="Enter your bearer token in the format: Bearer <your-token>"
  *         )
  *     )
  * )
